# mcuforge

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  GETTING_STARTED.md  SPECIFICATION.md  embtool-spec-v2.html  handoff-guide.md
docs/design/: README.md  cmake-management.md  dependency-graph.md  devtools-management.md  phase0-infra.md  phase1-toolchain.md  phase2-project.md  phase3-build.md  phase4-migrate.md
docs/handoffs/: 2026-03-12_18-15-00_mcuforge-claude-skills-release.md
docs/research/: insight-gap-analysis.md  insight-reflection-review.md  mcu-skill-bigpicture.md  mcu-skill-final-v4.md  mcu-skill-research-v2.md  mcu-skill-research-v3.md  mcu-skill-research.md  mcu-skill-review-report.md
skills/: manifest.json  pack.sh  settings.json.tmpl
skills/agents/: code-quality-analyzer.md  embedded-debugger.md  embedded-reviewer.md  gap-detector.md  hardware-interface-reviewer.md  memory-analyzer.md  memory-layout-guardian.md  module-generator.md  pdca-iterator.md  refactoring-advisor.md  report-generator.md  systematic-debugger.md
skills/hooks/: check-branch-naming.sh  check-branch-protection.sh  check-commit-message.sh  check-dangerous-commands.sh  check-dead-code.sh  check-driver-boundary.sh  check-float-suffix.sh  check-function-length.sh  check-global-variable.sh  check-nesting-depth.sh  check-parameter-count.sh  check-stdint-types.sh  inject-context.sh  run-build.sh  run-clang-format.sh  save-pre-compact.sh  (+3 more)
src/: main.rs
wix/: License.rtf  generate_icon.py  main.wxs
(+128 files in other folders)
