[package]
name = "embtool"
version = "0.1.0"
edition = "2024"
description = "Embedded toolchain manager for NXP and STM32 MCUs"
authors = ["노수장 <rsj0811@rootech.com>"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indicatif = "0.17"
dialoguer = "0.11"
dirs = "6"
anyhow = "1"
sha2 = "0.10"
iocraft = "0.7.18"
flate2 = "1"
tar = "0.4"
zip = "2"

[dev-dependencies]
tempfile = "3"
